--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,14 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc",
+    "build": "npm run prisma:generate && tsc",
+    "build:deploy": "npm run prisma:generate && npm run prisma:migrate:deploy && npm run build",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
+    "postinstall": "prisma generate"
   },
   "keywords": ["stroop", "cognitive", "test"],
   "author": "",
